tests/paczka1/fuzzy1/16223722.err
Error in line 3: iLI4QA A908 72,3
Error in line 10: TzqRg S491 19,7
Error in line 13: jag8sraIL0 A10 7,0
Error in line 21: jag8sraIL0 S883 23,26
Error in line 12: TzqRg S883 54,9
Error in line 38: TzqRg S883 93,4
